--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
-
-
+{% block title %}Sign Up{% endblock %}
 {% block content %}
 <body class="signup-bg">
 <div class="form__container">
-<h2 class="heading-secondary u-margin-bottom-h2">Create an Account</h2>
+<h2 class="heading-secondary">Create an Account</h2>
 <h3 class="heading-tertiary">Keep track of COVID-19 in your state.</h3>
 <form class="form" action="/register" method="POST">
   
@@ -26,4 +25,3 @@
 </div>
 </body>
 {% endblock %}
-</body>
