--- a/static/sass/base/_utilities.scss
+++ b/static/sass/base/_utilities.scss
@@ -1,1 +1,4 @@
 .u-margin-bottom-h2 {margin-bottom: 1.5rem !important;}
+.u-font-pink {color:lightpink;}
+.u-font-white {color:white;}
+.u-text-center {text-align: center;}
