--- a/static/sass/base/_typography.scss
+++ b/static/sass/base/_typography.scss
@@ -13,7 +13,7 @@
     text-align: center;
     color: white;
     font-family: 'Playfair Display', serif;
-    font-size: 3rem;
+    font-size: 2em;
     font-weight: bold;
 }
 
@@ -54,7 +54,7 @@ a {
     text-decoration: none;
     color: rgb(255, 166, 0);
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 1.3rem;
     letter-spacing: .2rem;
 }
 
