--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     <!-- RIGHT SIDE -->
     <div class="login__container--right">  
         <div class="login__formbox">
-            <h3 class="heading-tertiary u-font-pink">Login</h3>
+            <h3 class="heading-tertiary u-font-pink u-margin-bottom">Login</h3>
             <form class="login" action="/login" method="POST">
                 <label for="username"></label>
                 <input type="text" class="login__item" name="username" placeholder="Username" required>
