Updated action routes for signup page

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
 <div class="form__container">
 <h2 class="heading-secondary">Create an Account</h2>
 <h3 class="heading-tertiary">Keep track of COVID-19 in your state.</h3>
-<form class="form" action="/register" method="POST">
+<form class="form" action="/signup" method="POST">
       <label for="username"></label>
         <input type="text" class="form__item form__item--1" name="username" placeholder="Username" required>
       
