--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,17 +29,6 @@ body {
   font-size: 2em;
   font-weight: bold; }
 
-input.form__item[type="text"], input.form__item[type="password"], input.form__item[type="email"] {
-  color: white;
-  font-weight: 500;
-  font-size: 1.2rem;
-  font-family: 'Raleway', sans-serif; }
-
-input.form__item::placeholder {
-  color: white;
-  font-weight: bolder;
-  opacity: 1; }
-
 .form__item--btn {
   font-family: 'Raleway', sans-serif;
   font-weight: bolder;
@@ -62,9 +51,24 @@ a {
   font-size: 1.3rem;
   letter-spacing: .2rem; }
 
+input.form__item[type="text"], input.form__item[type="password"], input.form__item[type="email"] {
+  color: white;
+  font-weight: 500;
+  font-size: 1.2rem;
+  font-family: 'Raleway', sans-serif; }
+
+input.form__item::placeholder {
+  color: white;
+  font-weight: bolder;
+  opacity: 1; }
+
 input.login__item[type="text"], input.login__item[type="password"] {
   color: pink;
   font-size: 1.3rem; }
+
+input.login__item::placeholder {
+  color: pink;
+  opacity: 1; }
 
 .login__container {
   font-family: 'Raleway'; }
