--- a/static/sass/base/_typography.scss
+++ b/static/sass/base/_typography.scss
@@ -18,20 +18,6 @@
 }
 
 // SIGN UP
-input.form__item{
-    &[type="text"],  &[type="password"],  &[type="email"] {
-        color:white;
-        font-weight: 500;
-        font-size: 1.2rem;
-        font-family: 'Raleway', sans-serif;
-    }
-&::placeholder {
-        color:white;
-        font-weight: bolder;
-        opacity: 1;
-   }
-}
-
 .form__item {
     &--btn {
     font-family: 'Raleway', sans-serif;
@@ -49,13 +35,25 @@ input.form__item{
         letter-spacing: .1rem;
     }
 }
-
 a {
     text-decoration: none;
     color: rgb(255, 166, 0);
     font-weight: 500;
     font-size: 1.3rem;
     letter-spacing: .2rem;
+}
+input.form__item{
+    &[type="text"],  &[type="password"],  &[type="email"] {
+        color:white;
+        font-weight: 500;
+        font-size: 1.2rem;
+        font-family: 'Raleway', sans-serif;
+    }
+    &::placeholder {
+        color:white;
+        font-weight: bolder;
+        opacity: 1;
+   }
 }
 
 
@@ -64,6 +62,10 @@ input.login__item {
     &[type="text"], &[type="password"] {
         color: pink;
         font-size: 1.3rem;
+    }
+    &::placeholder {
+        color:pink;
+        opacity: 1;
     }
 }
 .login{
