--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -4,5 +4,7 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/navbar";
+
 @import "pages/signup";
 @import "pages/login";
