--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,7 +18,7 @@
         <button type="submit" class="form__item--btn">
             Sign Up
         </button>
-    <p class="form__item--4">Already have an account? <a id=hyperlinks href="/login">Sign in.</a></p>
+    <p class="form__item--4">Already have an account? <a class="link__login" href="/login">&nbsp;Sign in.</a></p>
 
   </form>
 </div>
