--- a/static/sass/base/_utilities.scss
+++ b/static/sass/base/_utilities.scss
@@ -1,4 +1,4 @@
 .u-margin-bottom {margin-bottom: 1.5rem !important;}
-.u-font-pink {color:lightpink;}
+.u-font-blue {color: $color-1;}
 .u-font-white {color:white;}
 .u-text-center {text-align: center;}
