--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Fredoka+One&family=Libre+Barcode+128+Text&family=Libre+Barcode+39+Extended+Text&family=Poiret+One&display=swap" rel="stylesheet"> 
 
     <!-- STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
