--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 {% block content %}
 <header>
     <div class="navbar">
-        <div class="logo">
-            <h1><a class="logo__link" href="/">COVID-19 Status</a></h1>
+        <div class="navbar__logo">
+            <h1><a class="navbar__logo--link" href="/">COVID-19 Status</a></h1>
         </div>
 
-        <div class="nav__links">
-            <a class="nav__links--login" href="/login">Login</a>
+        <div class="navbar__links">
+            <a class="navbar__links--login" href="/login">Login</a>
         </div>
     </div>
 </header>
