--- a/static/sass/components/_navbar.scss
+++ b/static/sass/components/_navbar.scss
@@ -1,15 +1,70 @@
+.homepage {
+    background-color: white;
+}
 .navbar {
     display: grid;
     min-height: 50px;
     grid-auto-flow: column;
-    background-color: rgba(0, 0, 0, 0.192);
+    background-color: whitesmoke;
     grid-gap: 20px;
     padding-left: 20px;
     padding-right: 20px;
-}
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.3);
+    &__logo {
+        display: grid;
+        justify-content: start;
+        align-content: center;
+    }
+    
+    &__links {
+        display: grid;
+        justify-content: end;
+        align-content: center;
+        grid-auto-flow: column;
+        grid-gap: 20px;
+        font-size: 20px;
+        
+        // &--login {
+            
+    
 
-.logo {
-    display: grid;
-    justify-content: start;
-    align-content: center;
+            
+        // }
+    }
 }
+.navbar__links--login {
+    display: inline-block;
+position: relative; 
+padding: 5px;
+}
+.navbar__links--login::before {
+                // content: "";
+                // position: absolute;
+                // width: 100%;
+                // height: 2px;
+                // bottom: 0;
+                // left: 0;
+                // background-color: black;
+                // transform-origin: bottom right;
+                // transform: scaleX(0);
+                // transition: transform 0.3s ease-out;
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                bottom: 0;
+                left: 0;
+                background-color: black;
+                visibility: hidden;
+                transform: scaleX(0);
+                transition: all 0.3s ease-in-out;
+}
+.navbar__links--login:hover::before {
+                // transform-origin: bottom left;
+                // transform: scaleX(1);
+                visibility: visible;
+                transform: scaleX(1);
+              }
+
+
+
