Added jQuery script

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,14 @@
 
     <!-- STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <!-- SCRIPT -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 {% block content %}
 {% endblock %}
+<script src="../static/js/time.js"></script>
 </body>
 </html>
